# internal/controller/admin_contoller.go
@@ -5,6 +5,7 @@ import (
 	"github.com/IkezawaYuki/popple/internal/presenter"
 	"github.com/IkezawaYuki/popple/internal/usecase"
 	"github.com/labstack/echo/v4"
+	"log/slog"
 	"net/http"
 )
 
@@ -20,10 +21,26 @@ func NewAdminController(adminUsecase *usecase.AdminUsecase, presenter2 *presente
 	}
 }
 
+// RegisterCustomer godoc
+//
+//	@Summary		顧客情報の作成
+//	@Description	顧客情報の作成
+//	@Produce		json
+//	@Security		Token
+//	@Param			name			formData	string	false	"Name"
+//	@Param			password		formData	string	false	"Password"
+//	@Param			email			formData	string	false	"Email"
+//	@Param			wordpress_url	formData	string	false	"WordPress URL"
+//	@Router			/admin/register/customer [post]
 func (a *AdminController) RegisterCustomer(c echo.Context) error {
+	slog.Info("RegisterCustomer is invoked")
 	var customer entity.Customer
-	if err := c.Bind(&customer); err != nil {
-		return c.String(http.StatusBadRequest, err.Error())
+	customer.Name = c.FormValue("name")
+	customer.Password = c.FormValue("password")
+	customer.Email = c.FormValue("email")
+	customer.WordpressURL = c.FormValue("wordpress_url")
+	if customer.Name == "" || customer.Password == "" || customer.Email == "" || customer.WordpressURL == "" {
+		return c.JSON(http.StatusBadRequest, "invalid value")
 	}
 	err := a.adminUsecase.RegisterCustomer(c.Request().Context(), &customer)
 	return c.JSON(a.presenter.Generate(err, customer))
